feat: optimise code

--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -8,32 +8,16 @@
           fill="white"
         />
       </svg>
-            <span class="title">Louvre</span>
+            <span class="header__logo-text">Louvre</span>
         </a>
         <label class="burger" for="burger-toggler"><span class="burger__buns"></span></label>
         <div class="burger-menu">
             <div class="burger-menu__container">
                 <ul class="burger-nav__list">
                     <li class="burger-nav__list-item">
-                        <a class="nav__list-link" href="user-page.html"><span class="nav__list-link-text">User page</span>
-            </a>
-                    </li>
-                    <li class="burger-nav__list-item">
-                        <a class="nav__list-link" href="admin-page.html"><span class="nav__list-link-text">Settings</span>
-            </a>
-                    </li>
-                    <li class="burger-nav__list-item">
-                        <a class="nav__list-link" href="register-page.html"><span class="nav__list-link-text">Register</span>
-            </a>
-                    </li>
-                    <li class="burger-nav__list-item">
-                        <a class="nav__list-link" href="login-page.html"><span class="nav__list-link-text">Login</span>
-            </a>
-                    </li>
-                    <li class="burger-nav__list-item">
-                        <a class="nav__list-link" href="#visiting"><span class="nav__list-link-text">Visiting</span>
+                        <a class="burger-nav__link" href="#visiting"><span class="burger-nav__link-text">Visiting</span>
               <svg
-                class="burger-nav-link__arrow"
+                class="burger-nav__link-arrow"
                 width="8"
                 height="12"
                 viewBox="0 0 8 12"
@@ -48,9 +32,9 @@
             </a>
                     </li>
                     <li class="burger-nav__list-item">
-                        <a class="nav__list-link" href="#explore"><span class="nav__list-link-text">Explore</span>
+                        <a class="burger-nav__link" href="#explore"><span class="burger-nav__link-text">Explore</span>
               <svg
-                class="burger-nav-link__arrow"
+                class="burger-nav__link-arrow"
                 width="8"
                 height="12"
                 viewBox="0 0 8 12"
@@ -65,9 +49,9 @@
             </a>
                     </li>
                     <li class="burger-nav__list-item">
-                        <a class="nav__list-link" href="#video"><span class="nav__list-link-text">Video</span>
+                        <a class="burger-nav__link" href="#video"><span class="burger-nav__link-text">Video</span>
               <svg
-                class="burger-nav-link__arrow"
+                class="burger-nav__link-arrow"
                 width="8"
                 height="12"
                 viewBox="0 0 8 12"
@@ -82,9 +66,9 @@
             </a>
                     </li>
                     <li class="burger-nav__list-item">
-                        <a class="nav__list-link" href="#gallery"><span class="nav__list-link-text">Gallery</span>
+                        <a class="burger-nav__link" href="#gallery"><span class="burger-nav__link-text">Gallery</span>
               <svg
-                class="burger-nav-link__arrow"
+                class="burger-nav__link-arrow"
                 width="8"
                 height="12"
                 viewBox="0 0 8 12"
@@ -99,9 +83,9 @@
             </a>
                     </li>
                     <li class="burger-nav__list-item">
-                        <a class="nav__list-link" href="#tickets"><span class="nav__list-link-text">Tickets</span>
+                        <a class="burger-nav__link" href="#tickets"><span class="burger-nav__link-text">Tickets</span>
               <svg
-                class="burger-nav-link__arrow"
+                class="burger-nav__link-arrow"
                 width="8"
                 height="12"
                 viewBox="0 0 8 12"
@@ -116,9 +100,9 @@
             </a>
                     </li>
                     <li class="burger-nav__list-item">
-                        <a class="nav__list-link" href="#contacts"><span class="nav__list-link-text">Contacts</span>
+                        <a class="burger-nav__link" href="#contacts"><span class="burger-nav__link-text">Contacts</span>
               <svg
-                class="burger-nav-link__arrow"
+                class="burger-nav__link-arrow"
                 width="8"
                 height="12"
                 viewBox="0 0 8 12"
@@ -233,7 +217,7 @@
                         </picture>
                     </li>
                 </ul>
-                <ul class="socials">
+                <ul class="burger-menu__socials socials">
                     <li class="socials__item">
                         <a class="socials__item-link" href="">
                             <svg class="socials__item-icon" width="23" height="16" viewBox="0 0 23 16" fill="none" xmlns="http://www.w3.org/2000/svg">
