--- a/src/html/includes/main/gallery.html
+++ b/src/html/includes/main/gallery.html
@@ -1,6 +1,6 @@
 <section id="gallery" class="gallery">
     <div class="gallery__container section-container">
-        <h2 class="title">Art Gallery</h2>
+        <h2 class="gallery__title title">Art Gallery</h2>
         <div class="gallery__body">
             <div class="body__column">
                 <img class="body__column-image" src="./img/gallery/galery1.webp" alt="" loading="lazy" />
