--- a/src/html/includes/main/explore.html
+++ b/src/html/includes/main/explore.html
@@ -1,46 +1,26 @@
 <section id="explore" class="explore">
-  <div class="explore__container section-container">
-    <div class="explore-left">
-      <div class="explore-left__title">
-        <h2 class="title">Picture explore</h2>
-      </div>
-      <div class="explore-left__desc">
-        <p class="explore-left__desc-text">
-          Las Meninas is a 1656 painting by Diego Velázquez, the leading artist of the Spanish
-          Golden Age.
-        </p>
-        <p class="explore-left__desc-text">
-          It was cleaned in 1984 to remove a <span class="text-marker">"yellow veil"</span> of dust
-          that had gathered since the previous restoration in the 19th century.
-        </p>
-        <p class="explore-left__desc-text">
-          The cleaning provoked furious protests, not because the picture had been damaged in any
-          way, but because it looked different.
-        </p>
-      </div>
+    <div class="explore__container section-container">
+        <div class="explore-left">
+            <div class="explore-left__title title-underline">
+                <h2 class="explore-left__title-text title">Picture explore</h2>
+            </div>
+            <div class="explore-left__desc">
+                <p class="explore-left__desc-text">
+                    Las Meninas is a 1656 painting by Diego Velázquez, the leading artist of the Spanish Golden Age.
+                </p>
+                <p class="explore-left__desc-text">
+                    It was cleaned in 1984 to remove a <span class="text-marker">"yellow veil"</span> of dust that had gathered since the previous restoration in the 19th century.
+                </p>
+                <p class="explore-left__desc-text">
+                    The cleaning provoked furious protests, not because the picture had been damaged in any way, but because it looked different.
+                </p>
+            </div>
+        </div>
+        <div class="explore__comparison">
+            <img class="explore__comparison-after" src="./img/explore/slider-after.webp" alt="" loading="lazy" />
+            <img class="explore__comparison-before" src="./img/explore/slider-before.webp" alt="" loading="lazy" />
+            <input class="explore__comparison-divisor" id="comparison-divisor" type="range" min="0" max="100" value="50" />
+            <label class="explore__comparison-undertext" for="comparison-divisor">Drag divisor</label>
+        </div>
     </div>
-    <div class="explore__comparison">
-      <img
-        class="explore__comparison-after"
-        src="./img/explore/slider-after.webp"
-        alt=""
-        loading="lazy"
-      />
-      <img
-        class="explore__comparison-before"
-        src="./img/explore/slider-before.webp"
-        alt=""
-        loading="lazy"
-      />
-      <input
-        class="explore__comparison-divisor"
-        id="comparison-divisor"
-        type="range"
-        min="0"
-        max="100"
-        value="50"
-      />
-      <label class="explore__comparison-undertext" for="comparison-divisor">Drag divisor</label>
-    </div>
-  </div>
 </section>
