--- a/src/scss/blocks/title.scss
+++ b/src/scss/blocks/title.scss
@@ -1,25 +1,34 @@
 .title-underline {
-  padding-bottom: 25px;
-  border-bottom: 3px solid var(--palette-primary-dark);
+    width: 100%;
+    display: flex;
+    border-bottom: 3px solid var(--palette-primary-dark);
+    @include media-breakpoint-up(lg) {
+        padding-bottom: 25px;
+    }
+    @include media-breakpoint-down(lg) {
+        padding-bottom: 20px;
+    }
 }
 
 .title {
-  white-space: nowrap;
-  font-family: "Forum", serif;
-  font-size: 70px;
-  font-weight: 400;
-  letter-spacing: 5px;
-  text-transform: uppercase;
-  @include media-breakpoint-down(xxl) {
-    font-size: 60px;
-  }
-  @include media-breakpoint-down(xl) {
-    font-size: 45px;
-  }
-  @include media-breakpoint-down(md) {
-    font-size: 40px;
-  }
-  @include media-breakpoint-down(sm) {
-    font-size: 28px;
-  }
+    white-space: nowrap;
+    font-family: "Forum", serif;
+    font-weight: 400;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    @include media-breakpoint-up(xxl) {
+        font-size: 70px;
+    }
+    @include media-breakpoint-between(xl, xxl) {
+        font-size: 60px;
+    }
+    @include media-breakpoint-between(md, xl) {
+        font-size: 45px;
+    }
+    @include media-breakpoint-between(sm, md) {
+        font-size: 40px;
+    }
+    @include media-breakpoint-down(sm) {
+        font-size: 28px;
+    }
 }
