--- a/src/scss/sections/header/burger.scss
+++ b/src/scss/sections/header/burger.scss
@@ -1,212 +1,245 @@
 .burger-toggler {
-  display: none;
+    display: none;
 }
 
 .burger-toggler:checked {
-  & ~ .header {
-    .header__container {
-      .burger-menu {
-        transform: translateX(0%);
-      }
-      .burger {
-        width: 26px;
-        height: 26px;
-        &__buns {
-          top: 12px;
-          left: -3px;
-          transform: rotate(45deg);
-          &::before {
-            top: 0;
-          }
-          &::after {
-            transform: rotate(90deg);
-            top: 0;
-          }
+    &~.header {
+        .header__container {
+            .burger-menu {
+                transform: translateX(0%);
+            }
+            .burger {
+                width: 26px;
+                height: 26px;
+                &__buns {
+                    top: 12px;
+                    left: -3px;
+                    transform: rotate(45deg);
+                    &::before {
+                        top: 0;
+                    }
+                    &::after {
+                        transform: rotate(90deg);
+                        top: 0;
+                    }
+                }
+            }
         }
-      }
     }
-  }
-  & ~ .main {
-    @include media-breakpoint-down(xl) {
-      .hero {
-        &__container {
-          .hero__title {
-            transform: translateX(-100%);
-          }
+    &~.main {
+        @include media-breakpoint-down(xl) {
+            .hero {
+                &__container {
+                    .hero__title {
+                        transform: translateX(-100%);
+                    }
+                }
+            }
         }
-      }
-    }
-    @include media-breakpoint-down(md) {
-      overflow-y: hidden;
-      .hero {
-        &__container {
-          opacity: 0;
+        @include media-breakpoint-down(md) {
+            overflow-y: hidden;
+            .hero {
+                &__container {
+                    opacity: 0;
+                }
+            }
         }
-      }
     }
-  }
 }
 
 .burger-menu {
-  display: none;
-  flex-direction: column;
-  height: 645px;
-  position: absolute;
-  transform: translateX(-100%);
-  top: 100%;
-  left: 0;
-  background-color: var(--palette-primary-main);
-  padding: 40px 25px;
-  z-index: 4;
-  transition: 0.5s;
-  gap: 10px;
-  &__container {
-    overflow: auto;
-    .socials {
-      display: none;
+    flex-direction: column;
+    position: absolute;
+    transform: translateX(-100%);
+    top: 100%;
+    left: 0;
+    background-color: var(--palette-primary-main);
+    padding: 40px 25px;
+    z-index: 4;
+    transition: 0.5s;
+    gap: 10px;
+    @include media-breakpoint-up(xl) {
+        display: none;
     }
-  }
-  @include media-breakpoint-down(xl) {
-    display: flex;
-    width: 40%;
-  }
-  @include media-breakpoint-down(md) {
-    width: 100%;
-    max-height: 100vh;
-    height: 100vh;
-    padding-bottom: 120px;
-    &__container {
-      .socials {
+    @include media-breakpoint-down(xl) {
         display: flex;
-        background-color: var(--palette-primary-main);
-        position: absolute;
-        bottom: 118px;
-        left: 0;
-        border-top: 1px solid var(--palette-primary-light);
-      }
     }
-  }
-  .burger-nav {
+    @include media-breakpoint-between(md, xl) {
+        width: 40%;
+    }
+    @include media-breakpoint-up(md) {
+        height: 645px;
+    }
+    @include media-breakpoint-down(md) {
+        width: 100%;
+        max-height: 100vh;
+        height: 100vh;
+        padding-bottom: 120px;
+    }
+    &__container {
+        overflow: auto;
+    }
+    &__socials {
+        @include media-breakpoint-up(md) {
+            display: none;
+        }
+        @include media-breakpoint-down(md) {
+            display: flex;
+            background-color: var(--palette-primary-main);
+            position: absolute;
+            bottom: 118px;
+            left: 0;
+            border-top: 1px solid var(--palette-primary-light);
+        }
+    }
+}
+
+.burger-nav {
     &__list {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      gap: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        margin-left: 20px;
     }
     &__list-item {
-      display: flex;
-      width: 100%;
-      .nav__list-link {
+        display: flex;
+        width: 100%;
+    }
+    &__link {
+        max-width: 200px;
+        width: 100%;
         display: inline-flex;
         justify-content: space-between;
         align-items: center;
-        .nav__list-link-text {
-          max-width: 150px;
-          font-family: "Roboto", sans-serif;
-          font-weight: 100;
-          font-size: 22px;
-          letter-spacing: 2px;
-          @include media-breakpoint-down(xl) {
-            font-weight: 300;
-            font-size: 20px;
-          }
+        border-radius: 25px;
+        color: var(--palette-primary-text);
+        @include media-breakpoint-up(xxl) {
+            padding: 10px 25px;
         }
-        .burger-nav-link__arrow {
-          width: 30px;
+        @include media-breakpoint-down(xxl) {
+            padding: 10px 15px;
         }
         &:hover {
-          .burger-nav-link__arrow {
-            path {
-              fill: var(--palette-secondary-light);
+            color: var(--palette-tertiary-text);
+            box-shadow: 0 0 24px 0 var(--palette-tertiary-text);
+            .burger-nav__link-arrow {
+                path {
+                    fill: var(--palette-secondary-light);
+                }
             }
-          }
         }
-      }
     }
-  }
-  .burger-gallery {
+    &__link-text {
+        max-width: 150px;
+        font-family: "Roboto", sans-serif;
+        letter-spacing: 2px;
+        @include media-breakpoint-up(xl) {
+            font-weight: 100;
+            font-size: 22px;
+        }
+        @include media-breakpoint-down(xl) {
+            font-weight: 300;
+            font-size: 20px;
+        }
+    }
+    &__link-arrow {
+        width: 30px;
+    }
+}
+
+.burger-gallery {
     position: relative;
-    display: none;
-    flex-wrap: wrap;
     width: 100%;
     justify-content: center;
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
-    &__item {
-      display: flex;
-      width: 100%;
-      @include media-breakpoint-down(sm) {
-        max-width: 95px;
-        max-height: 95px;
-      }
+    @include media-breakpoint-up(md) {
+        display: none;
     }
-    &__item:first-child {
-      grid-row-start: 1;
-      grid-column-start: 1;
-      grid-row-end: 2;
-      grid-column-end: 3;
+    @include media-breakpoint-between(sm, md) {
+        display: grid;
     }
-    &__item-image {
-      display: flex;
-      width: 100%;
-      height: 100%;
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-    }
-    @include media-breakpoint-down(md) {
-      display: grid;
+    @include media-breakpoint-up(sm) {
+        flex-wrap: wrap;
+        gap: 20px;
     }
     @include media-breakpoint-down(sm) {
-      display: flex;
-      flex-wrap: nowrap;
-      gap: 10px;
+        display: flex;
+        flex-wrap: nowrap;
+    }
+    @include media-breakpoint-between(s, sm) {
+        gap: 10px;
     }
     @include media-breakpoint-down(s) {
-      gap: 5px;
+        gap: 5px;
     }
-  }
+    &__item {
+        display: flex;
+        width: 100%;
+        @include media-breakpoint-down(sm) {
+            max-width: 95px;
+            max-height: 95px;
+        }
+    }
+    &__item:first-child {
+        grid-row-start: 1;
+        grid-column-start: 1;
+        grid-row-end: 2;
+        grid-column-end: 3;
+    }
+    &__item-image {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
 }
 
 .burger {
-  position: relative;
-  width: 32px;
-  height: 23px;
-  display: none;
-  align-items: center;
-  margin: 10px 20px;
-  &__buns {
-    position: absolute;
+    position: relative;
     width: 32px;
-    height: 3px;
-    top: 0;
-    left: 0;
-    background-color: var(--palette-primary-light);
-    transition-duration: 0.3s;
-    opacity: 1;
-    &::before,
-    &::after {
-      content: "";
-      position: absolute;
-      right: 0;
-      width: 32px;
-      height: 3px;
-      background-color: var(--palette-primary-light);
-      transition-duration: 0.3s;
+    height: 23px;
+    align-items: center;
+    margin: 10px 20px;
+    &__buns {
+        position: absolute;
+        width: 32px;
+        height: 3px;
+        top: 0;
+        left: 0;
+        background-color: var(--palette-primary-light);
+        transition-duration: 0.3s;
+        opacity: 1;
+        &::before,
+        &::after {
+            content: "";
+            position: absolute;
+            right: 0;
+            width: 32px;
+            height: 3px;
+            background-color: var(--palette-primary-light);
+            transition-duration: 0.3s;
+        }
+        &::before {
+            top: 10px;
+        }
+        &::after {
+            top: 20px;
+        }
     }
-    &::before {
-      top: 10px;
+    @include media-breakpoint-up(xl) {
+        display: none;
     }
-    &::after {
-      top: 20px;
+    @include media-breakpoint-down(xl) {
+        display: flex;
     }
-  }
-  @include media-breakpoint-down(xl) {
-    display: flex;
-  }
 }
