--- a/src/scss/sections/main/_journey.scss
+++ b/src/scss/sections/main/_journey.scss
@@ -2,14 +2,14 @@
     width: 100%;
     height: 100%;
     &__container {}
+    &__title {
+        color: var(--palette-tertiary-text);
+    }
 }
 
 .journey-heading {
     display: flex;
     gap: 60px;
-    .title {
-        color: var(--palette-tertiary-text);
-    }
     &__desc-text {
         font-family: "Roboto", sans-serif;
         font-weight: 300;
@@ -26,11 +26,13 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    margin-top: 75px;
-    @include media-breakpoint-down(xl) {
+    @include media-breakpoint-up(xl) {
+        margin-top: 75px;
+    }
+    @include media-breakpoint-between(lg, xl) {
         margin-top: 60px;
     }
-    @include media-breakpoint-down(lg) {
+    @include media-breakpoint-between(sm, lg) {
         margin-top: 40px;
     }
     @include media-breakpoint-down(sm) {
@@ -64,11 +66,11 @@
         }
     }
     &__main-play-icon {
-        @include media-breakpoint-down(xxl) {
+        @include media-breakpoint-between(lg, xxl) {
             width: 152px;
             height: 152px;
         }
-        @include media-breakpoint-down(lg) {
+        @include media-breakpoint-between(sm, lg) {
             width: 80px;
             height: 80px;
         }
@@ -83,10 +85,12 @@
         justify-content: space-between;
         align-items: center;
         background-color: var(--palette-primary-main);
-        padding: 27px 30px;
-        gap: 10px;
         z-index: 2;
-        @include media-breakpoint-down(lg) {
+        @include media-breakpoint-up(lg) {
+            padding: 27px 30px;
+            gap: 10px;
+        }
+        @include media-breakpoint-between(sm, lg) {
             padding: 10px 20px;
             gap: 5px;
         }
@@ -107,7 +111,9 @@
         border: none;
         cursor: pointer;
         transition: 0.3s;
-        padding: 10px;
+        @include media-breakpoint-up(xl) {
+            padding: 10px;
+        }
         @include media-breakpoint-down(xl) {
             padding: 5px;
         }
@@ -115,13 +121,14 @@
             filter: brightness(0.5);
         }
     }
-    &__play-btn {}
     &__play-bar,
     &__volume-bar {
         width: 100%;
-        height: 15px;
         cursor: pointer;
-        @include media-breakpoint-down(md) {
+        @include media-breakpoint-up(md) {
+            height: 15px;
+        }
+        @include media-breakpoint-between(sm, md) {
             height: 5px;
         }
         @include media-breakpoint-down(sm) {
@@ -177,10 +184,7 @@
     }
     &__pagination {
         display: flex;
-        @include media-breakpoint-up(xxxl) {
-            gap: 20px;
-        }
-        @include media-breakpoint-down(xxxl) {
+        @include media-breakpoint-up(sm) {
             gap: 20px;
         }
         @include media-breakpoint-down(sm) {
