--- a/src/scss/sections/main/_main.scss
+++ b/src/scss/sections/main/_main.scss
@@ -1,18 +1,17 @@
 .section-container {
-  max-width: 1480px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 75px 20px;
-  @include media-breakpoint-down(xl) {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
-  @include media-breakpoint-down(lg) {
-    padding-top: 40px;
-    padding-bottom: 40px;
-  }
-  @include media-breakpoint-down(sm) {
-    padding-top: 36px;
-    padding-bottom: 36px;
-  }
+    max-width: 1480px;
+    margin-left: auto;
+    margin-right: auto;
+    @include media-breakpoint-up(xl) {
+        padding: 75px 20px;
+    }
+    @include media-breakpoint-between(lg, xl) {
+        padding: 60px 20px;
+    }
+    @include media-breakpoint-between(sm, lg) {
+        padding: 40px 20px;
+    }
+    @include media-breakpoint-down(sm) {
+        padding: 36px 20px;
+    }
 }
