feat: optimse code

--- a/src/html/includes/main/parallax.html
+++ b/src/html/includes/main/parallax.html
@@ -1,10 +1,5 @@
 <div class="parallax">
-  <picture class="parallax-picture-box">
-    <img
-      class="parallax-picture-box__img"
-      src="/img/parallax/parallax-image.webp"
-      alt=""
-      loading="lazy"
-    />
-  </picture>
+    <picture class="parallax__container">
+        <img class="parallax__bg-image" src="/img/parallax/parallax-image.webp" alt="" loading="lazy" />
+    </picture>
 </div>
