--- a/src/html/includes/main/tickets.html
+++ b/src/html/includes/main/tickets.html
@@ -1,7 +1,7 @@
 <section id="tickets" class="tickets">
     <div class="tickets__container section-container">
-        <div class="tickets__title">
-            <h2 class="title">buy tickets</h2>
+        <div class="tickets__title title-underline">
+            <h2 class="tickets__title-text title">buy tickets</h2>
         </div>
         <div class="tickets__body">
             <img class="tickets__body-img" src="./img/tickets/main-image-tickets.webp" alt="" loading="lazy" />
