--- a/src/scss/sections/main/tickets/_tickets.scss
+++ b/src/scss/sections/main/tickets/_tickets.scss
@@ -5,65 +5,62 @@
         position: relative;
     }
     &__title {
-        display: flex;
-        border-bottom: 3px solid var(--palette-primary-dark);
-        padding-bottom: 25px;
-        @include media-breakpoint-down(xl) {
-            padding-bottom: 20px;
-        }
+        color: var(--palette-tertiary-text);
     }
     &__body {
         display: flex;
-        gap: 40px;
-        margin-top: 75px;
-        align-items: flex-start;
         justify-content: center;
-        @include media-breakpoint-down(xxl) {
-            gap: 10px;
+        @include media-breakpoint-up(xxl) {
+            gap: 40px;
         }
-        @include media-breakpoint-down(xl) {
+        @include media-breakpoint-between(xl, xxl) {
+            gap: 20px;
+        }
+        @include media-breakpoint-up(xl) {
+            margin-top: 75px;
+        }
+        @include media-breakpoint-between(lg, xl) {
             gap: 80px;
             margin-top: 60px;
         }
-        @include media-breakpoint-down(lg) {
+        @include media-breakpoint-between(md, lg) {
             margin-top: 40px;
             gap: 60px;
+        }
+        @include media-breakpoint-up(md) {
+            align-items: flex-start;
         }
         @include media-breakpoint-down(md) {
             flex-direction: column;
             align-items: center;
             gap: 40px;
+            margin-top: 40px;
         }
     }
     &__body-img {
-        max-width: 720px;
-        max-height: 550px;
         width: 100%;
         height: 100%;
         object-fit: cover;
-        @include media-breakpoint-down(xl) {
+        @include media-breakpoint-up(xl) {
+            max-width: 720px;
+            max-height: 550px;
+        }
+        @include media-breakpoint-between(lg, xl) {
             max-width: 700px;
             max-height: 440px;
         }
-        @include media-breakpoint-down(lg) {
+        @include media-breakpoint-between(md, lg) {
             max-width: 444px;
             max-height: 340px;
         }
+        @include media-breakpoint-between(sm, md) {
+            max-height: 300px;
+        }
         @include media-breakpoint-down(sm) {
             max-width: 100%;
-            max-height: 160px;
+            max-height: 200px;
         }
     }
-}
-
-.title {
-    color: var(--palette-tertiary-text);
-}
-
-.tickets-type,
-.tickets-amount {
-    display: flex;
-    flex-direction: column;
 }
 
 [type="radio"] {
@@ -76,11 +73,17 @@
 
 .tickets-type {
     flex: 1 0 auto;
-    padding-left: 20px;
-    padding-right: 20px;
+    flex-direction: column;
+    @include media-breakpoint-up(xxl) {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
     @include media-breakpoint-down(xxl) {
         padding-left: 5px;
         padding-right: 5px;
+    }
+    @include media-breakpoint-up(xl) {
+        display: flex;
     }
     @include media-breakpoint-down(xl) {
         display: none;
@@ -107,38 +110,41 @@
 }
 
 .tickets-amount {
+    display: flex;
+    flex-direction: column;
     width: 175px;
     &__title {
         font-family: "Roboto", sans-serif;
         font-weight: 700;
-        font-size: 28px;
         color: var(--palette-secondary-text);
-        margin-bottom: 35px;
         @include media-breakpoint-down(xl) {
             text-align: center;
+        }
+        @include media-breakpoint-up(sm) {
+            font-size: 28px;
+            margin-bottom: 35px;
         }
         @include media-breakpoint-down(sm) {
             font-size: 16px;
             margin-bottom: 20px;
         }
     }
-    &__col {}
     &__price {
         text-align: center;
     }
     &__price-title {
         font-family: "Roboto", sans-serif;
         font-weight: 700;
-        font-size: 28px;
         color: var(--palette-secondary-text);
+        @include media-breakpoint-up(sm) {
+            font-size: 28px;
+        }
         @include media-breakpoint-down(sm) {
             font-size: 16px;
         }
     }
-    &__price-value {}
     &__btn {
         padding: 11px 28px;
-        margin-top: 40px;
         background-color: var(--palette-primary-main);
         color: var(--palette-primary-text);
         border: none;
@@ -148,6 +154,9 @@
         font-size: 22px;
         text-align: center;
         transition-duration: 0.2s;
+        @include media-breakpoint-up(md) {
+            margin-top: 40px;
+        }
         @include media-breakpoint-down(md) {
             margin-top: 15px;
         }
@@ -164,8 +173,10 @@
     font-family: "Roboto", sans-serif;
     font-style: normal;
     font-weight: 300;
-    font-size: 22px;
     margin-bottom: 15px;
+    @include media-breakpoint-up(sm) {
+        font-size: 22px;
+    }
     @include media-breakpoint-down(sm) {
         font-size: 16px;
     }
