--- a/src/html/includes/footer.html
+++ b/src/html/includes/footer.html
@@ -1,75 +1,54 @@
 <footer class="footer">
-  <div class="footer__container section-container">
-    <div class="footer-top">
-      <a class="footer__logo" href="">
-        <svg
-          class="footer__logo-image"
-          width="49"
-          height="26"
-          viewBox="0 0 49 26"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
+    <div class="footer__container section-container">
+        <div class="footer-top">
+            <a class="footer__logo" href="">
+                <svg class="footer__logo-image" width="49" height="26" viewBox="0 0 49 26" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M49 26H0L24.5 0L49 26ZM13.3075 13.1309L16.6442 16.6702L19.981 13.1309L16.6442 9.58115L13.3075 13.1309ZM16.6442 25.0052L19.981 21.466L16.6442 17.9162L13.3075 21.466L16.6442 25.0052ZM32.4083 25.0052L35.745 21.466L32.4083 17.9162L29.019 21.466L32.4083 25.0052ZM28.4673 5.40314C28.4473 5.43762 28.4207 5.46941 28.3885 5.49738C27.3507 6.6178 26.2997 7.73822 25.2357 8.84817C25.1437 8.94241 25.2357 9.00524 25.2357 9.08901L28.3097 12.356L28.4542 12.4921L31.7909 8.96335L28.4673 5.40314ZM8.78847 25.0052L8.91984 24.8691L11.9938 21.6126C12.0428 21.5717 12.0702 21.5173 12.0702 21.4607C12.0702 21.4042 12.0428 21.3498 11.9938 21.3089C11.0611 20.3456 10.1547 19.3613 9.23512 18.3874L8.78847 17.9162L5.45174 21.466L8.78847 25.0052ZM17.2354 8.95288L20.5721 12.4921L20.6772 12.3979L23.8169 9.06806C23.922 8.95288 23.8169 8.89005 23.8169 8.80628L20.7429 5.56021L20.6115 5.42408L17.2354 8.95288ZM17.2354 17.3298L20.5721 20.8691L20.7429 20.7016C21.7413 19.6545 22.7528 18.6073 23.7643 17.4869C23.7926 17.4663 23.8152 17.4412 23.8307 17.4133C23.8461 17.3853 23.8541 17.3551 23.8541 17.3246C23.8541 17.2941 23.8461 17.2639 23.8307 17.2359C23.8152 17.208 23.7926 17.1829 23.7643 17.1623C22.8185 16.1675 21.8727 15.1728 20.9399 14.1675L20.5721 13.7906L17.2354 17.3298ZM32.9995 17.3298L36.3362 20.8691L39.6729 17.3298L36.3362 13.7906L32.9995 17.3298ZM28.4673 13.7801V13.8534L25.3013 17.2147C25.1962 17.3089 25.2357 17.3717 25.3013 17.4555L28.244 20.5969C28.3228 20.6911 28.4147 20.7853 28.5198 20.8901L31.8566 17.3508L28.4673 13.7801ZM12.7295 20.8482C12.7453 20.8175 12.7675 20.7892 12.7952 20.7644L15.9611 17.4031C16.0531 17.2984 15.9611 17.2461 15.9611 17.1623L12.8477 13.8953C12.8069 13.8484 12.7583 13.8061 12.7032 13.7696L9.37962 17.2984L12.7295 20.8482ZM32.3558 16.6597L35.6925 13.1204L32.3558 9.59162L29.019 13.1309L32.3558 16.6597ZM24.4737 8.28272L27.8105 4.74346L24.5263 1.27749H24.4606L21.2552 4.71204C21.2354 4.73712 21.2249 4.76616 21.2249 4.79581C21.2249 4.82546 21.2354 4.8545 21.2552 4.87958L24.4737 8.28272ZM24.4737 16.6597L27.8105 13.1204L24.5 9.58115L21.1633 13.1309L24.4737 16.6597ZM24.4737 25.0366L27.8105 21.4974L24.4737 17.9476L21.1633 21.466L24.4737 25.0366ZM40.2378 25.0366L43.5745 21.4974L40.2509 17.9791H40.1853L36.9668 21.3613C36.8617 21.4764 36.9668 21.5288 36.9668 21.6021L39.5941 24.4398L40.2378 25.0366ZM1.89169 25.2356H7.88204L4.91314 22.0942L1.89169 25.2356ZM41.1705 25.2356H47.1083L44.1394 22.0942L41.1705 25.2356ZM23.5542 25.2356L20.5721 22.0942L17.5901 25.2356H23.5542ZM33.3147 25.2356H39.2525L36.2836 22.0942L33.3147 25.2356ZM31.3968 25.2356L28.4279 22.0942L25.459 25.2356H31.3968ZM15.6327 25.2356L12.6638 22.0942L9.69491 25.2356H15.6327Z"
             fill="white"
           />
         </svg>
-        <span class="title">Louvre</span>
-      </a>
-      <div class="footer-right-nav">
-        <div class="footer-nav">
-          <ul class="footer-nav__list">
-            <li class="footer-nav__list-item">
-              <a class="footer-nav_list-link" href="#visiting">Visiting</a>
-            </li>
-            <li class="footer-nav__list-item">
-              <a class="footer-nav_list-link" href="#explore">Explore</a>
-            </li>
-            <li class="footer-nav__list-item">
-              <a class="footer-nav_list-link" href="#video">Video</a>
-            </li>
-          </ul>
-          <ul class="footer-nav__list">
-            <li class="footer-nav__list-item">
-              <a class="footer-nav_list-link" href="#gallery">Gallery</a>
-            </li>
-            <li class="footer-nav__list-item">
-              <a class="footer-nav_list-link" href="#tickets">Tickets</a>
-            </li>
-            <li class="footer-nav__list-item">
-              <a class="footer-nav_list-link" href="#contacts">Contacts</a>
-            </li>
-          </ul>
-        </div>
-        <ul class="socials">
-          <li class="socials__item">
-            <a class="socials__item-link" href="">
-              <svg
-                class="socials__item-icon"
-                width="23"
-                height="16"
-                viewBox="0 0 23 16"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
+                <span class="footer__logo-title">Louvre</span>
+            </a>
+            <div class="footer-right-nav">
+                <div class="footer-nav">
+                    <ul class="footer-nav__list">
+                        <li class="footer-nav__list-item">
+                            <a class="footer-nav__list-link" href="#visiting">Visiting</a>
+                        </li>
+                        <li class="footer-nav__list-item">
+                            <a class="footer-nav__list-link" href="#explore">Explore</a>
+                        </li>
+                        <li class="footer-nav__list-item">
+                            <a class="footer-nav__list-link" href="#video">Video</a>
+                        </li>
+                    </ul>
+                    <ul class="footer-nav__list">
+                        <li class="footer-nav__list-item">
+                            <a class="footer-nav__list-link" href="#gallery">Gallery</a>
+                        </li>
+                        <li class="footer-nav__list-item">
+                            <a class="footer-nav__list-link" href="#tickets">Tickets</a>
+                        </li>
+                        <li class="footer-nav__list-item">
+                            <a class="footer-nav__list-link" href="#contacts">Contacts</a>
+                        </li>
+                    </ul>
+                </div>
+                <ul class="footer__socials socials">
+                    <li class="socials__item">
+                        <a class="socials__item-link" href="">
+                            <svg class="socials__item-icon" width="23" height="16" viewBox="0 0 23 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M9.03 11.38V4.62L14.97 8L9.03 11.38ZM22.23 2.5C22.1026 2.01772 21.8508 1.57733 21.4998 1.22285C21.1488 0.868375 20.711 0.612223 20.23 0.48C18.46 2.98023e-08 11.35 0 11.35 0C11.35 0 4.25 2.98023e-08 2.48 0.48C1.99901 0.612223 1.56115 0.868375 1.21018 1.22285C0.859213 1.57733 0.607431 2.01772 0.48 2.5C2.98023e-08 4.28 0 8 0 8C0 8 2.98023e-08 11.72 0.47 13.5C0.598299 13.9835 0.851586 14.4247 1.20441 14.7793C1.55723 15.1338 1.99717 15.3893 2.48 15.52C4.25 16 11.36 16 11.36 16C11.36 16 18.46 16 20.23 15.52C20.711 15.3878 21.1488 15.1316 21.4998 14.7771C21.8508 14.4227 22.1026 13.9823 22.23 13.5C22.71 11.72 22.71 8 22.71 8C22.71 8 22.71 4.28 22.24 2.5H22.23Z"
                   fill="white"
                 />
               </svg>
-            </a>
-          </li>
-          <li class="socials__item">
-            <a class="socials__item-link" href="">
-              <svg
-                class="socials__item-icon"
-                width="21"
-                height="20"
-                viewBox="0 0 21 20"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
+                        </a>
+                    </li>
+                    <li class="socials__item">
+                        <a class="socials__item-link" href="">
+                            <svg class="socials__item-icon" width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M12.0202 0C13.8202 0 14.2002 0.0199999 15.1202 0.06C16.1802 0.11 16.9102 0.28 17.5402 0.53C18.2002 0.78 18.7601 1.13 19.3102 1.68C19.8701 2.23 20.2101 2.79 20.4701 3.45C20.7201 4.08 20.8801 4.81 20.9302 5.88C20.9802 6.83 20.9902 7.2 20.9902 9.2V10.8C20.9902 12.8 20.9802 13.17 20.9302 14.12C20.9144 14.9468 20.7589 15.7651 20.4701 16.54C20.2101 17.2 19.8701 17.76 19.3202 18.31C18.7602 18.87 18.2002 19.21 17.5402 19.47C16.9102 19.72 16.1802 19.88 15.1202 19.93C14.1702 19.98 13.7902 19.99 11.7902 19.99H10.2002C8.20015 19.99 7.83015 19.98 6.87015 19.93C6.04333 19.9141 5.22515 19.7586 4.45015 19.47C3.78376 19.2195 3.17981 18.8271 2.68015 18.32C2.16796 17.8186 1.77199 17.211 1.52015 16.54C1.23177 15.765 1.07626 14.9468 1.06015 14.12C1.01113 13.0874 0.991123 12.0537 1.00015 11.02V8.97C1.00015 7.17 1.02015 6.79 1.06015 5.87C1.11015 4.81 1.28015 4.08 1.52015 3.45C1.78015 2.79 2.12015 2.23 2.68015 1.68C3.17533 1.16743 3.78059 0.774177 4.45015 0.53C5.22461 0.238206 6.04278 0.079305 6.87015 0.06C7.79015 0.0199999 8.17015 0 9.97015 0H12.0202ZM12.0402 1.8H9.95015C8.22015 1.8 7.85015 1.82 6.95015 1.86C5.98015 1.9 5.45015 2.06 5.10015 2.2C4.63015 2.38 4.30015 2.6 3.95015 2.95C3.60015 3.3 3.38015 3.63 3.20015 4.1C3.07015 4.45 2.90015 4.98 2.86015 5.96C2.82015 6.86 2.80015 7.22 2.80015 8.96V11.04C2.80015 12.78 2.82015 13.14 2.86015 14.04C2.90015 15.01 3.06015 15.54 3.20015 15.89C3.38015 16.36 3.60015 16.69 3.95015 17.04C4.30015 17.39 4.63015 17.61 5.10015 17.79C5.45015 17.93 5.98015 18.09 6.96015 18.13C7.93015 18.18 8.28015 18.19 10.4402 18.19H11.5502C13.7202 18.19 14.0602 18.18 15.0402 18.13C16.0102 18.09 16.5402 17.93 16.8902 17.79C17.3602 17.61 17.6902 17.39 18.0402 17.04C18.3902 16.69 18.6102 16.36 18.7902 15.89C18.9302 15.54 19.0901 15.01 19.1301 14.04C19.1801 13.06 19.1902 12.72 19.1902 10.55V9.45C19.1902 7.28 19.1801 6.93 19.1301 5.95C19.0901 4.98 18.9302 4.45 18.7902 4.1C18.6292 3.66543 18.373 3.27246 18.0402 2.95C17.7179 2.61692 17.3249 2.3606 16.8902 2.2C16.2971 1.98317 15.6716 1.86822 15.0402 1.86C14.0409 1.81227 13.0405 1.79226 12.0402 1.8ZM11.0002 4.86C12.362 4.86 13.6681 5.40101 14.6311 6.36401C15.5941 7.32701 16.1352 8.63311 16.1352 9.995C16.1352 11.3569 15.5941 12.663 14.6311 13.626C13.6681 14.589 12.362 15.13 11.0002 15.13C9.63827 15.13 8.33216 14.589 7.36916 13.626C6.40616 12.663 5.86515 11.3569 5.86515 9.995C5.86515 8.63311 6.40616 7.32701 7.36916 6.36401C8.33216 5.40101 9.63827 4.86 11.0002 4.86ZM11.0002 6.66C10.1157 6.66 9.26739 7.01137 8.64195 7.6368C8.01652 8.26223 7.66515 9.1105 7.66515 9.995C7.66515 10.8795 8.01652 11.7278 8.64195 12.3532C9.26739 12.9786 10.1157 13.33 11.0002 13.33C11.8846 13.33 12.7329 12.9786 13.3584 12.3532C13.9838 11.7278 14.3352 10.8795 14.3352 9.995C14.3352 9.1105 13.9838 8.26223 13.3584 7.6368C12.7329 7.01137 11.8846 6.66 11.0002 6.66ZM16.3302 3.46C16.6484 3.46 16.9536 3.58643 17.1787 3.81147C17.4037 4.03652 17.5302 4.34174 17.5302 4.66C17.5302 4.97826 17.4037 5.28349 17.1787 5.50853C16.9536 5.73357 16.6484 5.86 16.3302 5.86C16.0119 5.86 15.7067 5.73357 15.4816 5.50853C15.2566 5.28349 15.1302 4.97826 15.1302 4.66C15.1302 4.34174 15.2566 4.03652 15.4816 3.81147C15.7067 3.58643 16.0119 3.46 16.3302 3.46Z"
                   fill="white"
@@ -130,20 +109,20 @@
     <ul class="footer-bottom__list">
       <li class="footer-bottom__list-item">
         <a
-          class="footer-bottom__list-link"
+          class="footer-nav__list-link"
           href="https://ru.wikipedia.org/wiki/2022_%D0%B3%D0%BE%D0%B4"
           >© 2022</a
         >
       </li>
       <li class="footer-bottom__list-item">
         <a
-          class="footer-bottom__list-link"
+          class="footer-nav__list-link"
           href="https://ru.wikipedia.org/wiki/%D0%9B%D1%83%D0%B2%D1%80"
           >Museum</a
         >
       </li>
       <li class="footer-bottom__list-item">
-        <a class="footer-bottom__list-link" href="https://github.com/maxdanko2000">maxdanko2000</a>
+        <a class="footer-nav__list-link" href="https://github.com/maxdanko2000">maxdanko2000</a>
       </li>
     </ul>
   </div>
