--- a/src/html/includes/main/contacts.html
+++ b/src/html/includes/main/contacts.html
@@ -1,12 +1,11 @@
 <section id="contacts" class="contacts">
-  <div class="contacts__container section-container">
-    <div class="contacts-title title-underline">
-      <h2 class="contacts-title__text title">Contacts</h2>
-    </div>
-    <div class="contacts-body">
-      <div class="contacts-body__text">
-        <span class="contacts-body__text-title"
-          >Palais Royal <br />
+    <div class="contacts__container section-container">
+        <div class="contacts__title title-underline">
+            <h2 class="contacts__title-text title">Contacts</h2>
+        </div>
+        <div class="contacts-body">
+            <div class="contacts-body__text">
+                <span class="contacts-body__text-title">Palais Royal <br />
           Musee du Louvre</span
         >
         <ul class="contacts-list">
@@ -32,11 +31,7 @@
         class="contacts-body__map"
         title="museum map"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.8528140509957!2d2.333669615853563!3d48.86101700847543!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e267a32d441%3A0xb0088e1f7c07f451!2z0J_QuNGA0LDQvNC40LTQsCDQm9GD0LLRgNCw!5e0!3m2!1sru!2sby!4v1651659873322!5m2!1sru!2sby"
-        width="960"
-        height="620"
         style="border: 0"
-        allowfullscreen=""
-        loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"
       ></iframe>
     </div>
