--- a/src/scss/sections/_footer.scss
+++ b/src/scss/sections/_footer.scss
@@ -1,146 +1,116 @@
 .footer {
-  width: 100%;
-  height: 100%;
-  background-color: var(--palette-primary-main);
-  &__container {
-  }
-  &__logo {
-    display: inline-flex;
-    gap: 25px;
-    padding: 10px 20px;
-    align-items: center;
-    justify-content: center;
-    .title {
-      font-size: 28px;
-      letter-spacing: 2px;
-      color: var(--palette-primary-text);
-      @include media-breakpoint-down(xl) {
-        font-size: 26px;
-      }
+    width: 100%;
+    height: 100%;
+    background-color: var(--palette-primary-main);
+    &__logo {
+        display: inline-flex;
+        gap: 25px;
+        padding: 10px 20px;
+        align-items: center;
+        justify-content: center;
     }
-  }
-  &__logo-image {
-    @include media-breakpoint-down(sm) {
-      max-width: 26px;
-      max-height: 16px;
+    &__logo-image {
+        @include media-breakpoint-down(sm) {
+            max-width: 26px;
+            max-height: 16px;
+        }
     }
-  }
+    &__logo-title {
+        font-family: 'Forum', serif;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        color: var(--palette-primary-text);
+        @include media-breakpoint-up(xl) {
+            font-size: 28px;
+        }
+        @include media-breakpoint-down(xl) {
+            font-size: 26px;
+        }
+    }
+    &__socials {
+        display: flex;
+        @include media-breakpoint-up(lg) {
+            justify-content: flex-end;
+        }
+        @include media-breakpoint-down(lg) {
+            justify-content: center;
+        }
+    }
 }
 
 .footer-top {
-  display: flex;
-  justify-content: space-between;
-  gap: 20px;
-  @include media-breakpoint-down(md) {
-    flex-direction: column;
-    align-items: center;
-  }
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    @include media-breakpoint-down(md) {
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 .footer-right-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  max-width: 900px;
-  width: 100%;
-  @include media-breakpoint-down(lg) {
-    flex-direction: column;
-  }
-  .socials {
-    max-width: 260px;
-    align-items: flex-end;
-    &__item {
-    }
-    &__item-icon {
-    }
-  }
-}
-
-.footer-nav {
-  display: flex;
-  gap: 10px;
-  &_list-link {
-    color: var(--palette-primary-text);
-    padding: 10px 25px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: "Roboto", sans-serif;
-    font-weight: 100;
-    font-size: 22px;
-    letter-spacing: 2px;
-    border-radius: 25px;
-    transition-duration: 0.3s;
-    @include media-breakpoint-down(xxl) {
-      padding: 10px 15px;
-    }
-    @include media-breakpoint-down(xl) {
-      font-weight: 300;
-      font-size: 20px;
-    }
-    @include media-breakpoint-down(lg) {
-      font-size: 18px;
-    }
-    @include media-breakpoint-down(md) {
-      font-size: 16px;
-    }
-    &:hover {
-      color: var(--palette-tertiary-text);
-      box-shadow: 0 0 24px 0 var(--palette-tertiary-text);
-    }
-  }
-  &__list {
-  }
-  &__list-item {
-  }
-}
-
-.footer-bottom {
-  &__list {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 50px;
-    padding: 20px;
-    border-top: 3px solid var(--palette-primary-light);
-  }
-  &__list-item {
-    &:nth-child(2) {
-      @include media-breakpoint-down(md) {
-        display: none;
-      }
-    }
-  }
-  &__list-link {
-    color: var(--palette-primary-text);
-    padding: 10px 25px;
+    max-width: 900px;
     width: 100%;
-    display: flex;
-    align-items: center;
-    font-family: "Roboto", sans-serif;
-    font-weight: 100;
-    font-size: 22px;
-    letter-spacing: 2px;
-    border-radius: 25px;
-    transition-duration: 0.3s;
-    white-space: nowrap;
-    @include media-breakpoint-down(xxl) {
-      padding: 10px 15px;
-    }
-    @include media-breakpoint-down(xl) {
-      font-weight: 300;
-      font-size: 20px;
-    }
     @include media-breakpoint-down(lg) {
-      font-size: 18px;
+        flex-direction: column;
     }
-    @include media-breakpoint-down(md) {
-      font-size: 16px;
+}
+
+.footer-nav {
+    display: flex;
+    gap: 10px;
+    &__list-link {
+        color: var(--palette-primary-text);
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-family: "Roboto", sans-serif;
+        font-weight: 100;
+        letter-spacing: 2px;
+        border-radius: 25px;
+        transition-duration: 0.3s;
+        white-space: nowrap;
+        @include media-breakpoint-up(xl) {
+            padding: 10px 25px;
+            font-size: 22px;
+        }
+        @include media-breakpoint-down(xl) {
+            padding: 10px 15px;
+        }
+        @include media-breakpoint-between(lg, xl) {
+            font-size: 20px;
+        }
+        @include media-breakpoint-between(md, lg) {
+            font-size: 18px;
+        }
+        @include media-breakpoint-down(md) {
+            font-size: 16px;
+        }
+        &:hover {
+            color: var(--palette-tertiary-text);
+            box-shadow: 0 0 24px 0 var(--palette-tertiary-text);
+        }
     }
-    &:hover {
-      color: var(--palette-tertiary-text);
-      box-shadow: 0 0 24px 0 var(--palette-tertiary-text);
+}
+
+.footer-bottom {
+    &__list {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 50px;
+        padding: 20px;
+        border-top: 3px solid var(--palette-primary-light);
     }
-  }
+    &__list-item {
+        &:nth-child(2) {
+            @include media-breakpoint-down(md) {
+                display: none;
+            }
+        }
+    }
 }
