--- a/src/scss/sections/header/burger.scss
+++ b/src/scss/sections/header/burger.scss
@@ -80,6 +80,7 @@
         overflow: auto;
     }
     &__socials {
+        justify-content: center;
         @include media-breakpoint-up(md) {
             display: none;
         }
