--- a/src/scss/sections/_user.scss
+++ b/src/scss/sections/_user.scss
@@ -8,7 +8,9 @@
         display: flex;
         justify-content: space-between;
         margin-top: 40px;
-        gap: 10px;
+        @include media-breakpoint-up(md) {
+            gap: 10px;
+        }
         @include media-breakpoint-down(md) {
             flex-direction: column-reverse;
             align-items: center;
@@ -94,8 +96,10 @@
     &__center-container {
         display: flex;
         justify-content: space-between;
-        width: 300px;
-        margin-top: 40px;
+        @include media-breakpoint-up(lg) {
+            width: 300px;
+            margin-top: 40px;
+        }
         @include media-breakpoint-down(lg) {
             width: 100%;
             margin-top: 20px;
@@ -116,7 +120,6 @@
         justify-content: center;
         align-self: center;
         padding: 11px 20px;
-        margin-top: 40px;
         background-color: var(--palette-primary-dark);
         color: var(--palette-primary-text);
         font-family: "Roboto", sans-serif;
@@ -125,6 +128,9 @@
         max-width: 400px;
         transition-duration: 0.3s;
         border-radius: 5px;
+        @include media-breakpoint-up(md) {
+            margin-top: 40px;
+        }
         @include media-breakpoint-down(md) {
             margin-top: 20px;
         }
